--- a/BeneluxWebb/templates/esea.html
+++ b/BeneluxWebb/templates/esea.html
@@ -11,15 +11,27 @@
 
 <!-- center-aligned tabs -->
 <ul class="nav nav-tabs justify-content-center mt-5" id="eseaTabs" role="tablist">
-  {% for season in season_numbers %}
+  {% for season in season_info %}
+    {% set label = "" %}
+    {% if season.event_start and season.event_end %}
+      {% if current_time >= season.event_start and current_time <= season.event_end %}
+        {% set label = "ongoing" %}
+      {% elif current_time >= season.event_start - 604800 and current_time < season.event_start %} {# 604800 seconds = 7 days #}
+        {% set label = "starting soon" %}
+      {% endif %}
+    {% endif %}
     <li class="nav-item" role="presentation">
       <button 
-        class="nav-link {% if loop.first %}active{% endif %}" 
-        id="season-tab-{{ season }}"
-        data-season="{{ season }}"
+        class="nav-link d-flex align-items-center gap-2 {% if loop.first %}active{% endif %}" 
+        id="season-tab-{{ season.season_number }}"
+        data-season="{{ season.season_number }}"
         type="button"
-        role="tab">
-        Season {{ season }}
+        role="tab"
+      >
+        <span>Season {{ season.season_number }}</span>
+        {% if label %}
+          <span class="badge bg-secondary">{{ label }}</span>
+        {% endif %}
       </button>
     </li>
   {% endfor %}
